# Only_Codex_Research

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  README_EN.md  config.only_codex.example.yaml  config.researchclaw.example.yaml  pyproject.toml
docs/: README_CN.md  supervisor-mode.md  supervisor-mode_CN.md
researchclaw/: config.py  health.py
researchclaw/llm/: __init__.py  acp_client.py  client.py  supervisor_client.py
researchclaw/pipeline/: code_agent.py  executor.py  runner.py
scripts/: replay_supervisor_responses.py  supervisor_exchange.py  verify_supervisor_response.py
tests/: test_rc_config.py  test_rc_executor.py  test_rc_health.py  test_supervisor_client.py
